--- a/content/technology/4-things-every-programmer-should-know/post.mdx
+++ b/content/technology/4-things-every-programmer-should-know/post.mdx
@@ -8,8 +8,10 @@ trending: false # leave trending, topPick, and popular as false. The maintainers
 topPick: false
 popular: false
 ---
-
-This file contains various Markdown snippets that you may use to construct an article. Markdown is very easy to use!
+MetaMask is a browser extension wallet that runs in your browser (Chrome,
+Firefox, Opera, or Brave Browser). It is easy to use and convenient for testing, as
+it is able to connect to a variety of Ethereum nodes and test blockchains. Meta‐
+Mask is a web-based wallet.
 
 ## Markdown Guide
 
