--- a/content/technology/4-things-every-programmer-should-know/post.mdx
+++ b/content/technology/4-things-every-programmer-should-know/post.mdx
@@ -1,5 +1,5 @@
 ---
-title: Best place to learn Solidity 
+title: How to install metamask 
 image: images/socrates.jpg # place in /images folder, in same directory
 imageAttribution: https://www.vecteezy.com/free-vector/drawing # if attribution needed, put link to source
 date: 2022-05-11 # Date written, OR date edited
