--- a/content/technology/4-things-every-programmer-should-know/post.mdx
+++ b/content/technology/4-things-every-programmer-should-know/post.mdx
@@ -1,6 +1,6 @@
 ---
 title: How to install metamask extension
-image: images/socrates.jpg # place in /images folder, in same directory
+image:Image by rawpixel.com on Freepik # place in /images folder, in same directory
 imageAttribution: https://www.vecteezy.com/free-vector/drawing # if attribution needed, put link to source
 date: 2023-05-11 # Date written, OR date edited
 category: Technology
